Fix minor issues in lab2

--- a/Labs/lab2/lab2.ipynb
+++ b/Labs/lab2/lab2.ipynb
@@ -67,7 +67,9 @@
       "source": [
         "from qiskit import QuantumRegister, ClassicalRegister, QuantumCircuit\n",
         "from qiskit import Aer, execute\n",
-        "from qiskit.tools.visualization import plot_histogram"
+        "from qiskit.visualization import plot_histogram\n",
+        "\n",
+        "%matplotlib inline"
       ]
     },
     {
@@ -134,7 +136,7 @@
         "    \n",
         "    # \"\"\"TODO: Implement this method\"\"\"\n",
         "    \n",
-        "    return qc, \"NAND Gate ({}, {})\".format(x, y)"
+        "    return None, \"NAND Gate ({}, {})\".format(x, y)"
       ]
     },
     {
@@ -153,7 +155,7 @@
         "    \n",
         "    # \"\"\"TODO: Implement this method\"\"\"\n",
         "    \n",
-        "    return qc, \"XOR Gate ({}, {})\".format(x, y)"
+        "    return None, \"XOR Gate ({}, {})\".format(x, y)"
       ]
     },
     {
@@ -199,6 +201,7 @@
         "\n",
         "            print(result.get_counts())\n",
         "            plot_histogram(result.get_counts(), title=circuit_name)\n",
+        "\n",
         "            print()"
       ]
     },
