Make few refinements to lab2

--- a/Labs/lab2/lab2.ipynb
+++ b/Labs/lab2/lab2.ipynb
@@ -82,7 +82,9 @@
         "### 2.2.3 Define Circuits\n",
         "The following code defines three-qubits quantum circuit that implements the AND gate using Toffoli gate (ccx in Qiskit).\n",
         "\n",
-        "![And Gate Using Toffoli Quantum Gate](AND.png)"
+        "![And Gate Using Toffoli Quantum Gate](AND.png)\n",
+        "\n",
+        " You're required to make implement NAND & XOR circuits using quantum circuits in a way similar to the provided AND_circuit(), i.e. by using Toffoli gate. "
       ]
     },
     {
@@ -168,7 +170,7 @@
         "\n",
         "The following code executes the defined quantum circuits and draw a histogram for each result.\n",
         "\n",
-        "**TODO**:\n",
+        "**TODO** (Answer the following questions):\n",
         "1. The backend is qasm_simulator, what will change to run it on a real quantum computer?\n",
         "2. Number of shots is 1024, why do we need to execute many shots?\n",
         "3. Why we need to use a histogram?"
